build(postgres): add alpine 3.22
Signed-off-by: 吴小白 <296015668@qq.com>

--- a/postgres/16/alpine3.22/Dockerfile
+++ b/postgres/16/alpine3.22/Dockerfile
@@ -1,11 +1,13 @@
-{{
-	def alpine_version:
-		env.variant | ltrimstr("alpine")
--}}
-FROM ghcr.io/loong64/alpine:{{ alpine_version }}
+#
+# NOTE: THIS DOCKERFILE IS GENERATED VIA "apply-templates.sh"
+#
+# PLEASE DO NOT EDIT IT DIRECTLY.
+#
+
+FROM ghcr.io/loong64/alpine:3.22
 
 # 70 is the standard uid/gid for "postgres" in Alpine
-# https://git.alpinelinux.org/aports/tree/main/postgresql-common/postgresql-common.pre-install?h=3.22-stable
+# https://git.alpinelinux.org/aports/tree/main/postgresql-common/postgresql-common.pre-install?h=3.21-stable
 RUN set -eux; \
 	addgroup -g 70 -S postgres; \
 	adduser -u 70 -S -D -G postgres -H -h /var/lib/postgresql -s /bin/sh postgres; \
@@ -42,9 +44,7 @@ RUN set -eux; \
 # verify that the binary works
 	gosu --version; \
 	gosu nobody true
-{{ if env.version | IN("13", "14", "15", "16") then ( -}}
 RUN set -eux; ln -svf gosu /usr/local/bin/su-exec; su-exec nobody true # backwards compatibility (removed in PostgreSQL 17+)
-{{ ) else "" end -}}
 
 # make the "en_US.UTF-8" locale so postgres will be utf-8 enabled by default
 # alpine doesn't require explicit locale-file generation
@@ -52,17 +52,13 @@ ENV LANG en_US.utf8
 
 RUN mkdir /docker-entrypoint-initdb.d
 
-ENV PG_MAJOR {{ env.version }}
-ENV PG_VERSION {{ .version }}
-ENV PG_SHA256 {{ .sha256 }}
+ENV PG_MAJOR 16
+ENV PG_VERSION 16.9
+ENV PG_SHA256 07c00fb824df0a0c295f249f44691b86e3266753b380c96f633c3311e10bd005
 
-{{
-	def llvmver:
-		"19"
--}}
 ENV DOCKER_PG_LLVM_DEPS \
-		llvm{{ llvmver }}-dev \
-		clang{{ llvmver }}
+		llvm19-dev \
+		clang19
 
 RUN set -eux; \
 	\
@@ -103,14 +99,10 @@ RUN set -eux; \
 		zlib-dev \
 # https://www.postgresql.org/docs/10/static/release-10.html#id-1.11.6.9.5.13
 		icu-dev \
-{{ if .major >= 14 then ( -}}
 # https://www.postgresql.org/docs/14/release-14.html#id-1.11.6.5.5.3.7
 		lz4-dev \
-{{ ) else "" end -}}
-{{ if .major >= 15 then ( -}}
 # https://www.postgresql.org/docs/15/release-15.html "--with-zstd to enable Zstandard builds"
 		zstd-dev \
-{{ ) else "" end -}}
 	; \
 	\
 	cd /usr/src/postgresql; \
@@ -124,10 +116,10 @@ RUN set -eux; \
 	wget -O config/config.guess 'https://github.com/cgitmirror/config/raw/refs/heads/master/config.guess'; \
 	wget -O config/config.sub 'https://github.com/cgitmirror/config/raw/refs/heads/master/config.sub'; \
 	\
-# https://git.alpinelinux.org/aports/tree/community/postgresql15/APKBUILD?h=3.22-stable#n176 ("export LLVM_CONFIG")
-	export LLVM_CONFIG="/usr/lib/llvm{{ llvmver }}/bin/llvm-config"; \
-# https://git.alpinelinux.org/aports/tree/community/postgresql15/APKBUILD?h=3.22-stable#n180 ("older clang versions don't have a 'clang' exe anymore.")
-	export CLANG=clang-{{ llvmver }}; \
+# https://git.alpinelinux.org/aports/tree/community/postgresql15/APKBUILD?h=3.21-stable&id=40544ade947bec1798edb0f749f4e967e842624b#n172
+	export LLVM_CONFIG="/usr/lib/llvm19/bin/llvm-config"; \
+# https://git.alpinelinux.org/aports/tree/community/postgresql15/APKBUILD?h=3.21-stable&id=40544ade947bec1798edb0f749f4e967e842624b#n177
+	export CLANG=clang-19; \
 	\
 # configure options taken from:
 # https://anonscm.debian.org/cgit/pkg-postgresql/postgresql.git/tree/debian/rules?h=9.5
@@ -137,20 +129,12 @@ RUN set -eux; \
 # "/usr/src/postgresql/src/backend/access/common/tupconvert.c:105: undefined reference to `libintl_gettext'"
 #		--enable-nls \
 		--enable-integer-datetimes \
-{{ if .major <= 16 then ( -}}
-{{ # in 17: this option is reversed. you need to disable it -}}
 		--enable-thread-safety \
-{{ ) else "" end -}}
 		--enable-tap-tests \
 # skip debugging info -- we want tiny size instead
 #		--enable-debug \
 		--disable-rpath \
 		--with-uuid=e2fs \
-{{ # in 16: "configure: error: unrecognized options: --with-gnu-ld" -}}
-{{ # https://github.com/postgres/postgres/commit/9db49fc5bfdc0126be03f4b8986013e59d93b91d -}}
-{{ if .major <= 15 then ( -}}
-		--with-gnu-ld \
-{{ ) else "" end -}}
 		--with-pgport=5432 \
 		--with-system-tzdata=/usr/share/zoneinfo \
 		--prefix=/usr/local \
@@ -167,12 +151,8 @@ RUN set -eux; \
 		--with-libxslt \
 		--with-icu \
 		--with-llvm \
-{{ if .major >= 14 then ( -}}
 		--with-lz4 \
-{{ ) else "" end -}}
-{{ if .major >= 15 then ( -}}
 		--with-zstd \
-{{ ) else "" end -}}
 	; \
 	make -j "$(nproc)" world-bin; \
 	make install-world-bin; \
@@ -194,7 +174,8 @@ RUN set -eux; \
 		zstd \
 # https://wiki.alpinelinux.org/wiki/Release_Notes_for_Alpine_3.16.0#ICU_data_split
 		icu-data-full \
-# https://git.alpinelinux.org/aports/tree/community/nss_wrapper/APKBUILD?h=3.22-stable#n7 ("ppc64le: test case segfaults")
+# nss_wrapper is not availble on ppc64le: "test case segfaults in ppc64le"
+# https://git.alpinelinux.org/aports/commit/testing/nss_wrapper/APKBUILD?h=3.17-stable&id=94d81ceeb58cff448d489bbcbe9a6d40c9991663
 		$([ "$(apk --print-arch)" != 'ppc64le' ] && echo 'nss_wrapper') \
 	; \
 	apk del --no-network .build-deps; \
