--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -110,7 +110,7 @@ jobs:
                 crane cp "$repo:$version-$suite" "$repo:$major_version"
               fi
               ;;
-            alpine*)
+            alpine3.21|alpine3.22)
               crane cp "$repo:$full_version-$suite" "$repo:$full_version-$suite-loong64"
               crane index append -t "$repo:$full_version-$suite" \
                 -m "$repo:$full_version-$suite-loong64" \
@@ -121,6 +121,7 @@ jobs:
                 crane cp "$repo:$full_version-$suite" "$repo:$minor_version-alpine"
                 if [ "$version" = "$latest_version" ]; then
                   crane cp "$repo:$full_version-$suite" "$repo:$major_version-alpine"
+                  crane cp "$repo:$full_version-$suite" "$repo:alpine"
                 fi
               fi
               ;;
