--- a/mariadb/11.8/Dockerfile
+++ b/mariadb/11.8/Dockerfile
@@ -71,7 +71,7 @@ ENV LANG C.UTF-8
 # bashbrew-architectures: amd64 arm64v8 ppc64le s390x
 ARG MARIADB_VERSION=1:11.8.2+maria~debsid
 ENV MARIADB_VERSION $MARIADB_VERSION
-# release-status:RC
+# release-status:Stable
 # release-support-type:Long Term Support
 # (https://downloads.mariadb.org/rest-api/mariadb/)
 
