--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         name: ['postgres']
         suite: ['trixie', 'alpine3.21', 'alpine3.22']
-        version: ['13', '14', '15', '16', '17']
+        version: ['13', '14', '15', '16', '17', '18']
         latest_version: ['17']
 
     steps:
