--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -57,6 +57,9 @@ jobs:
             exit 0
           fi
           full_version=$(grep -m1 -oP "ENV PG_VERSION \K.*" ${{ matrix.name }}/${{ matrix.version }}/${{ matrix.suite }}/Dockerfile | cut -d'-' -f1)
+          ## Handle version format:
+          # 18~beta1 --> 18.0beta1
+          full_version=${full_version/\~/}
           echo "full_version=${full_version}" >> $GITHUB_ENV
 
           version=${{ matrix.version }}
