--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         name: ['node']
         suite: ['trixie', 'trixie-slim', 'alpine3.21', 'alpine3.22']
-        version: ['20', '22', '23', '24']
+        version: ['20', '22', '24']
         latest_version: ['24']
 
     steps:
