--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
       matrix:
         suite: ['trixie', 'trixie-slim', 'alpine']
         app: ['node']
-        version: ['20', '22', '23', '24']
+        version: ['20', '22', '24']
 
     steps:
     - uses: docker/setup-qemu-action@v3
@@ -102,7 +102,7 @@ jobs:
       matrix:
         suite: ['trixie']
         app: ['mariadb']
-        version: ['11.4', '11.8']
+        version: ['11.8', '12.0', '12.1']
 
     steps:
     - uses: docker/setup-qemu-action@v3
