--- a/node/24/alpine3.21/Dockerfile
+++ b/node/24/alpine3.21/Dockerfile
@@ -1,6 +1,6 @@
 FROM ghcr.io/loong64/alpine:3.21
 
-ENV NODE_VERSION 24.10.0
+ENV NODE_VERSION=24.10.0
 
 RUN addgroup -g 1000 node \
     && adduser -u 1000 -G node -s /bin/sh -D node \
@@ -74,7 +74,7 @@ RUN addgroup -g 1000 node \
   && npm --version \
   && rm -rf /tmp/*
 
-ENV YARN_VERSION 1.22.22
+ENV YARN_VERSION=1.22.22
 
 RUN apk add --no-cache --virtual .build-deps-yarn curl gnupg tar \
   # use pre-existing gpg directory, see https://github.com/nodejs/docker-node/pull/1895#issuecomment-1550389150
