build(app): bump app to latest

--- a/mariadb/12.1/Dockerfile
+++ b/mariadb/12.1/Dockerfile
@@ -69,9 +69,9 @@ RUN mkdir /docker-entrypoint-initdb.d
 ENV LANG C.UTF-8
 
 # bashbrew-architectures: amd64 arm64v8 ppc64le s390x
-ARG MARIADB_VERSION=1:12.1.1+maria~deb13
+ARG MARIADB_VERSION=1:12.1.2+maria~deb13
 ENV MARIADB_VERSION $MARIADB_VERSION
-# release-status:RC
+# release-status:Stable
 # release-support-type:Rolling
 # (https://downloads.mariadb.org/rest-api/mariadb/)
 
@@ -91,7 +91,7 @@ RUN set -ex; \
 	export PYTHONDONTWRITEBYTECODE=1; \
 	\
 	dpkgArch="$(dpkg --print-architecture)"; \
-	aptRepo="[ signed-by=/etc/apt/trusted.gpg.d/mariadb.gpg ] http://archive.mariadb.org/mariadb-12.1.1/repo/debian/ trixie main main/debug"; \
+	aptRepo="[ signed-by=/etc/apt/trusted.gpg.d/mariadb.gpg ] http://archive.mariadb.org/mariadb-12.1.2/repo/debian/ trixie main main/debug"; \
 	case "$dpkgArch" in \
 		amd64 | arm64 | ppc64el | s390x) \
 # arches officialy built by upstream
