build(nginx): 更新 nginx 1.29.4

--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -56,9 +56,18 @@ jobs:
           echo "minor_version=${minor_version}" >> $GITHUB_ENV
 
           version=${{ matrix.branch }}
-          image_tag=${version}-alpine3.21-slim
-          minor_image_tag=${minor_version}-alpine3.21-slim
-          full_image_tag=${full_version}-alpine3.21-slim
+          case ${version} in
+            mainline)
+              image_tag=${version}-alpine3.23-slim
+              minor_image_tag=${minor_version}-alpine3.23-slim
+              full_image_tag=${full_version}-alpine3.23-slim
+              ;;
+            stable)
+              image_tag=${version}-alpine3.21-slim
+              minor_image_tag=${minor_version}-alpine3.21-slim
+              full_image_tag=${full_version}-alpine3.21-slim
+              ;;
+          esac
 
           echo "image_tag=${image_tag}" >> $GITHUB_ENV
           echo "minor_image_tag=${minor_image_tag}" >> $GITHUB_ENV
@@ -135,9 +144,14 @@ jobs:
               full_image_tag=${full_version}-trixie
               ;;
             alpine)
-              image_tag=${version}-alpine3.21
-              minor_image_tag=${minor_version}-alpine3.21
-              full_image_tag=${full_version}-alpine3.21
+              if [ "${{ matrix.branch }}" = "stable" ]; then
+                alpine_version="alpine3.21"
+              else
+                alpine_version="alpine3.23"
+              fi
+              image_tag=${version}-${alpine_version}
+              minor_image_tag=${minor_version}-${alpine_version}
+              full_image_tag=${full_version}-${alpine_version}
               ;;
           esac
 
@@ -231,9 +245,14 @@ jobs:
               full_image_tag=${full_version}-trixie
               ;;
             alpine*)
-              image_tag=${version}-alpine3.21
-              minor_image_tag=${minor_version}-alpine3.21
-              full_image_tag=${full_version}-alpine3.21
+              if [ "${{ matrix.branch }}" = "stable" ]; then
+                alpine_version="alpine3.21"
+              else
+                alpine_version="alpine3.23"
+              fi
+              image_tag=${version}-${alpine_version}
+              minor_image_tag=${minor_version}-${alpine_version}
+              full_image_tag=${full_version}-${alpine_version}
               ;;
           esac
 
