build(php): 修正 pcre-jit

--- a/php/8.3/alpine3.22/zts/Dockerfile
+++ b/php/8.3/alpine3.22/zts/Dockerfile
@@ -154,6 +154,7 @@ RUN set -eux; \
 		\
 # in PHP 7.4+, the pecl/pear installers are officially deprecated (requiring an explicit "--with-pear")
 		--with-pear \
+		--without-pcre-jit \
 		\
 		\
 # https://github.com/docker-library/php/pull/939#issuecomment-730501748
