--- a/php/8.2/trixie/fpm/Dockerfile
+++ b/php/8.2/trixie/fpm/Dockerfile
@@ -164,6 +164,7 @@ RUN set -eux; \
 		\
 # in PHP 7.4+, the pecl/pear installers are officially deprecated (requiring an explicit "--with-pear")
 		--with-pear \
+		--without-pcre-jit \
 		\
 # bundled pcre does not support JIT on riscv64 until 10.41 (php 8.3+)
 # https://github.com/PCRE2Project/pcre2/commits/pcre2-10.41/src/sljit/sljitNativeRISCV_64.c
