--- a/php/8.4/alpine3.22/fpm/Dockerfile
+++ b/php/8.4/alpine3.22/fpm/Dockerfile
@@ -153,6 +153,7 @@ RUN set -eux; \
 		\
 # in PHP 7.4+, the pecl/pear installers are officially deprecated (requiring an explicit "--with-pear")
 		--with-pear \
+		--without-pcre-jit \
 		\
 		\
 		--disable-cgi \
