--- a/php/8.4/trixie/fpm/Dockerfile
+++ b/php/8.4/trixie/fpm/Dockerfile
@@ -164,6 +164,7 @@ RUN set -eux; \
 		\
 # in PHP 7.4+, the pecl/pear installers are officially deprecated (requiring an explicit "--with-pear")
 		--with-pear \
+		--without-pcre-jit \
 		\
 		--with-libdir="lib/$debMultiarch" \
 		\
