--- a/php/8.4/alpine3.23/fpm/Dockerfile
+++ b/php/8.4/alpine3.23/fpm/Dockerfile
@@ -94,6 +94,7 @@ RUN set -eux; \
 		curl-dev \
 		gnu-libiconv-dev \
 		libsodium-dev \
+		libucontext-dev \
 		libxml2-dev \
 		linux-headers \
 		oniguruma-dev \
@@ -108,7 +109,7 @@ RUN set -eux; \
 	export \
 		CFLAGS="$PHP_CFLAGS" \
 		CPPFLAGS="$PHP_CPPFLAGS" \
-		LDFLAGS="$PHP_LDFLAGS" \
+		LDFLAGS="$PHP_LDFLAGS -lucontext" \
 # https://github.com/php/php-src/blob/d6299206dd828382753453befd1b915491b741c6/configure.ac#L1496-L1511
 		PHP_BUILD_PROVIDER='https://github.com/docker-library/php' \
 		PHP_UNAME='Linux - Docker' \
